fix: hide unwanted scrollbars

--- a/src/assets/scss/components/playground-configuration.scss
+++ b/src/assets/scss/components/playground-configuration.scss
@@ -17,10 +17,6 @@
     }
 }
 
-[data-config-section] {
-
-}
-
 [data-config-section-toggle] {
     cursor: pointer;
     display: flex;
@@ -253,6 +249,10 @@ ul.config__added-rules {
     margin: 0;
     padding: 0;
     font-family: var(--mono-font);
+    /* IE and Edge */
+    -ms-overflow-style: none;
+    /* Firefox */
+    scrollbar-width: none;
 
     li {
         margin: 0 0 1rem 0;
@@ -265,6 +265,11 @@ ul.config__added-rules {
 
 .config__added-rules__item {
     padding: 0 .25rem;
+}
+
+.config__added-rules::-webkit-scrollbar {
+    width: 0;
+    background: transparent;
 }
 
 .config__added-rules__rule-name {
