--- a/src/assets/scss/foundations.scss
+++ b/src/assets/scss/foundations.scss
@@ -59,6 +59,7 @@ html {
     height: 100%;
     font-family: var(--text-font);
     overflow-x: hidden;
+    overflow-y: hidden;
     caret-color: var(--link-color);
 }
 
